--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <p>Create new branch</p>
     <p>switch in the branch</p>
     <p>Create new content, fix problem, add new function in the branch and marge it with "Master"</p>
+    <h3>Add something useful</h3>
 </body>
 </html>
