Third commit, first in branch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>switch in the branch</p>
     <p>Create new content, fix problem, add new function in the branch and marge it with "Master"</p>
     <h3>Add something useful</h3>
+    <h4>New branch</h4>
 </body>
 </html>
